# A-Sajith-SAE_Veronoi_Equipe_i

./: README.md
phase 2/: .gitignore  README.md  points_avec_erreurs.txt  points_exemple.txt  pyproject.toml  requirements.txt
phase 2/src/voronoi_app/: __main__.py
phase 2/tests/: conftest.py
phase 2/tests/integration/: test_end_to_end_export.py
phase 2/tests/unit/: test_color_assignment.py  (+2 more)
phase1/: README.md  pointplan.json  test_phase1_voronoi.py  voronoi.py
phase2/IA_Chatgpt5.2/: README.md  points_2_points.txt  points_avec_erreurs.txt  points_exemple.txt  pyproject.toml  requirements.txt
phase2/IA_Chatgpt5.2/src/voronoi_app/: __main__.py
phase2/IA_Chatgpt5.2/src/voronoi_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
phase2/IA_Chatgpt5.2/src/voronoi_app/application/: color_assignment.py  controller.py  point_parsing.py  voronoi_service.py
phase2/IA_Chatgpt5.2/src/voronoi_app/domain/: errors.py  models.py
phase2/IA_Chatgpt5.2/src/voronoi_app/infrastructure/: voronoi_scipy.py
phase2/IA_Chatgpt5.2/src/voronoi_app/infrastructure/exports/: png_exporter.py  svg_exporter.py
phase2/IA_Chatgpt5.2/src/voronoi_app/presentation/qt/: app.py  main_window.py  point_table_model.py  voronoi_view.py
phase2/IA_Chatgpt5.2/tests/: conftest.py
phase2/IA_Chatgpt5.2/tests/integration/: test_end_to_end_export.py
phase2/IA_Chatgpt5.2/tests/unit/: test_color_assignment.py  test_point_parsing.py  test_voronoi_service.py
phase2/Perplexity/: README.md  main.py  points_test.txt  requirements.txt
phase2/deepseek/: README.md  __init__.py  app.py
(+59 files in other folders)
