[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voronoi-app"
version = "0.1.0"
description = "Application desktop de génération et visualisation de diagrammes de Voronoï."
requires-python = ">=3.12"
authors = [{ name = "Student" }]

[project.scripts]
voronoi-app = "voronoi_app.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
